# checo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.py  run_conan.bat  vcpkg.json
app/minecraft/auto_sell/: CMakeLists.txt  main.cpp
app/rimworld/image_to_plan/: CMakeLists.txt
app/rimworld/image_to_plan/src/: image_to_plan_widget.cpp  image_to_plan_widget.h  main.cpp
lib/checo_command_executor/: CMakeLists.txt
lib/checo_command_executor/include/: checo_command_executor_export.h
lib/checo_command_executor/include/checo/command_executor/: command_executor.h  complex_command_executor.h  key_sequence.h  mouse.h  mouse_click.h  mouse_move.h  shutdown.h  start_application.h  terminate_application.h  toggle_window.h  type_text.h
lib/checo_command_executor/src/checo/command_executor/: complex_command_executor.cpp  key_sequence.cpp  mouse.cpp  mouse_click.cpp  mouse_move.cpp  shutdown.cpp  start_application.cpp  terminate_application.cpp  toggle_window.cpp  type_text.cpp
lib/checo_dialogs/: CMakeLists.txt
lib/checo_dialogs/include/: checo_dialogs_export.h
lib/checo_dialogs/include/checo/ui/: key_sequence_edit_dialog.h  overlay_dialog.h  select_list_item_dialog.h  text_edit_dialog.h
lib/checo_dialogs/src/checo/ui/: key_sequence_edit_dialog.cpp  overlay_dialog.cpp  select_list_item_dialog.cpp  text_edit_dialog.cpp
lib/checo_dialogs/ui/checo/ui/: key_sequence_edit_dialog.ui  text_edit_dialog.ui
lib/checo_foreground_app_tracker/: CMakeLists.txt
lib/checo_foreground_app_tracker/include/: checo_foreground_app_tracker_export.h
lib/checo_foreground_app_tracker/include/checo/os/: foreground_app_tracker.h
lib/checo_foreground_app_tracker/src/checo/os/: foreground_app_tracker.cpp
lib/checo_id/: CMakeLists.txt
lib/checo_id/include/checo/id/: snowflake_id.h
lib/checo_id/src/: snowflake_id.cpp
lib/checo_io/: CMakeLists.txt
lib/checo_io/include/: std_fundamental_types.h
lib/checo_io/include/checo/: fundamental_io.h  map_io.h  push_back_container_io.h  sequence_container_io.h  set_io.h  string_io.h  unordered_map_io.h  vector_io.h
lib/checo_io/src/: string_io.cpp
lib/checo_io/test/: CMakeLists.txt
lib/checo_io/test/src/: fundamental_io_tests.cpp  map_io_tests.cpp  push_back_container_io_tests.cpp  sequence_container_io_tests.cpp  set_io_tests.cpp  string_io_tests.cpp
lib/checo_log/: CMakeLists.txt
lib/checo_log/include/checo/log/: log_base.h  log_stdout.h
lib/checo_log/src/: log_base.cpp  log_stdout.cpp
lib/checo_logging/: CMakeLists.txt
lib/checo_logging/include/checo/logging/: log.h  log_stdout.h
lib/checo_logging/src/: log.cpp  log_stdout.cpp
lib/checo_math/: CMakeLists.txt
lib/checo_math/include/checo/math/: matrix.h
lib/checo_math/test/: CMakeLists.txt
lib/checo_math/test/src/matrix/: test_matrix_comparison.cpp  test_matrix_constructor.cpp  test_matrix_multiply.cpp
lib/checo_os/: CMakeLists.txt
lib/checo_os/include/: checo_os_export.h
lib/checo_os/include/checo/os/: application_info.h  application_info_model.h
lib/checo_os/src/checo/os/: application_info.cpp  application_info_model.cpp
lib/checo_os_ui/: CMakeLists.txt
lib/checo_os_ui/include/: checo_os_ui_export.h
lib/checo_qt/: CMakeLists.txt
lib/checo_qt/checo_qt/: CMakeLists.txt
lib/checo_qt/checo_qt_buttons/: CMakeLists.txt
lib/checo_qt/checo_qt_command_executors/: CMakeLists.txt
lib/checo_qt/checo_qt_command_executors/src/: command_executor.cpp  key_sequence_command_executor.cpp  mouse_click_command_executor.cpp  terminate_application_command_executor.cpp  toggle_window_command_executor.cpp  type_text_command_executor.cpp
lib/checo_qt/checo_qt_dialogs/: CMakeLists.txt
lib/checo_qt/checo_qt_dialogs/src/: add_tile_dialog.cpp  overlay_dialog.cpp  select_application_dialog.cpp  select_list_item_dialog.cpp
lib/checo_qt/checo_qt_dialogs/ui/: add_tile_dialog.ui  key_sequence_edit_dialog.ui  select_list_item_dialog.ui  text_edit_dialog.ui
lib/checo_qt/checo_qt_gui/src/: application_info_model.cpp
lib/checo_qt/checo_qt_widgets/: CMakeLists.txt
lib/checo_qt/checo_qt_widgets/src/: tile_table_model.cpp  tile_view.cpp
lib/checo_qt/include/checo/qt/: foreground_app_tracker.h
lib/checo_qt/src/: foreground_app_tracker.cpp
lib/checo_qt_buttons/: CMakeLists.txt
lib/checo_qt_buttons/include/checo/qt/: multi_icon_button.h
lib/checo_qt_buttons/src/: multi_icon_button.cpp
lib/checo_qt_command_executor/: CMakeLists.txt
lib/checo_qt_command_executor/include/checo/qt/: command_executor.h  (+10 more)
lib/checo_qt_command_executor/src/: command_executor.cpp  complex_command_executor.cpp  key_sequence_command_executor.cpp  mouse_click_command_executor.cpp  mouse_command_executor.cpp  mouse_move_command_executor.cpp  shutdown_command_executor.cpp  start_application_command_executor.cpp  terminate_application_command_executor.cpp  toggle_window_command_executor.cpp  type_text_command_executor.cpp
lib/checo_qt_gui/: CMakeLists.txt
lib/checo_qt_gui/src/: application_info.cpp  application_info_model.cpp
lib/checo_qt_widgets/: CMakeLists.txt
lib/checo_qt_widgets/src/: tile_delegate.cpp  tile_table_model.cpp  tile_view.cpp
lib/checo_rpg/: CMakeLists.txt
lib/checo_rpg/checo_rpg/src/: lib_export_symbols.cpp
lib/checo_rpg/checo_rpg_io/: CMakeLists.txt
lib/checo_rpg/checo_rpg_io/src/: character_io.cpp  entity_io.cpp  inventory_io.cpp  item_io.cpp
lib/checo_rpg/checo_rpg_io/test/: CMakeLists.txt
lib/checo_rpg/checo_rpg_test_support/: CMakeLists.txt
lib/checo_rpg/checo_rpg_test_support/src/: ability_test_support.cpp  character_test_support.cpp  currency_test_support.cpp  entity_test_support.cpp  inventory_test_support.cpp  item_test_support.cpp  stat_test_support.cpp  status_effect_test_support.cpp  test_support.cpp  test_support.h
lib/checo_rpg_io/: CMakeLists.txt
lib/checo_rpg_io/src/: character_io.cpp  item_io.cpp
lib/checo_rpg_io/test/src/: currency_io_tests.cpp  entity_io_tests.cpp  item_io_tests.cpp
lib/checo_tile_view/: CMakeLists.txt
lib/checo_tile_view/include/: checo_tile_view_export.h
(+106 files in other folders)
