cmake_minimum_required(VERSION 3.27)

project("checo_qt")

# Add libraries associated with Qt functionality
add_subdirectory("checo_qt")
add_subdirectory("checo_qt_buttons")
add_subdirectory("checo_qt_command_executors")
add_subdirectory("checo_qt_dialogs")
add_subdirectory("checo_qt_gui")
add_subdirectory("checo_qt_widgets")
